update: index.html

--- a/CSS.html
+++ b/CSS.html
@@ -46,6 +46,7 @@
             text-decoration-color: rgb(138, 3, 249);
             text-decoration-thickness: 3px;
             text-decoration-style: dashed;
+            text-wrap: wrap;
             color: rgb(134, 0, 0);
             width: 100%;
             height: auto;
