--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             padding: 20px;
             flex: 2;
             max-width: 700px;
+            
         }
         aside {
             background-color: #ddd;
@@ -65,6 +66,12 @@
         }
         section {
             margin-bottom: 30px;
+        }
+        header h1 {
+            letter-spacing: 2px;
+        }
+        main p {
+            text-indent: 2em;
         }
         h2 {
             color: #333;
